# netfw-rs

./: Cargo.toml  README.md  deny.toml  search-index.js  settings.html  source-files.js
examples/: kill-steam.rs
netfw/: all.html  enum.FirewallAction.html  enum.FirewallRuleDirection.html  fn.bstr_to_os_string.html  fn.os_str_to_bstr.html  index.html  sidebar-items.js  struct.FirewallProfile.html  struct.FirewallRulesIter.html  struct.VariantEnumerator.html
netfw_sys/: all.html  constant.CLSID_INETFWPOLICY2.html  constant.CLSID_INETFWRULE.html  constant.IID_IDISPATCH.html  constant.IID_IENUM_VARIANT.html  constant.IID_INET_FW_POLICY2.html  constant.IID_INET_FW_RULE.html  constant.IID_INET_FW_RULES.html  constant.IID_INET_FW_SERVICE_RESTRICTION.html  constant.NET_FW_ACTION_ALLOW.html  constant.NET_FW_ACTION_BLOCK.html  constant.NET_FW_ACTION_MAX.html  constant.NET_FW_MODIFY_STATE_GP_OVERRIDE.html  constant.NET_FW_MODIFY_STATE_INBOUND_BLOCKED.html  constant.NET_FW_MODIFY_STATE_OK.html  constant.NET_FW_PROFILE2_ALL.html  constant.NET_FW_PROFILE2_DOMAIN.html  constant.NET_FW_PROFILE2_PRIVATE.html  constant.NET_FW_PROFILE2_PUBLIC.html  constant.NET_FW_RULE_DIR_IN.html  constant.NET_FW_RULE_DIR_MAX.html  constant.NET_FW_RULE_DIR_OUT.html  fn.SafeArrayGetElement.html  fn.SafeArrayGetVartype.html  index.html  sidebar-items.js  struct.IDispatch.html  struct.IDispatchVTable.html  struct.IEnumVARIANT.html  struct.IEnumVARIANTVTable.html  struct.INetFwPolicy2.html  struct.INetFwPolicy2VTable.html  struct.INetFwRule.html  struct.INetFwRuleVTable.html  struct.INetFwRules.html  struct.INetFwRulesVTable.html  struct.INetFwServiceRestriction.html  (+11 more)
src/: lib.rs  rule.rs  (+2 more)
(+72 files in other folders)
