[package]
name = "netfw"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.2.1"
com = "0.4.0"
netfw-sys = { path = "./lib/netfw-sys" }
winapi = { version = "0.3.9", features = [ "oaidl", "objbase", "oleauto" ] }

[workspace]
members = [ "./lib/netfw-sys" ]
