[package]
name = "netfw"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.2.1"
com = "0.4.0"
netfw-sys = { path = "./lib/netfw-sys" }
skylight = { git = "https://github.com/adumbidiot/skylight-rs", rev = "75f96917ab8d4851fa80f1c225faf551bfa3347a", features = [ "oleauto" ] }
winapi = { version = "0.3.9", features = [ "oaidl", "objbase", "oleauto" ] }

[dev-dependencies]
libc = "0.2.80"
winapi = { version = "0.3.9", features = [ "shellapi" ] }

[workspace]
members = [ "./lib/netfw-sys" ]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
